--- a/Grafica-E1-E2-Diferencia_v3.0.ipynb
+++ b/Grafica-E1-E2-Diferencia_v3.0.ipynb
@@ -13,7 +13,7 @@
      "collapsed": false,
      "input": [
       "#!/usr/bin/env python\n",
-      "\"\"\" Grafica-E1-E2-Diferencia_v3.0 Genera una grafica para comparar los valores de E1, E2 Y Diferencia.\"\"\"\n",
+      "\"\"\" comentario Grafica-E1-E2-Diferencia_v3.0 Genera una grafica para comparar los valores de E1, E2 Y Diferencia.\"\"\"\n",
       "\n",
       "__author__  = 'Paola Cornejo' + 'Sarai Reyes' \n",
       "\n",
